fix(LeadspaceBlock): linklist spacing

--- a/packages/styles/scss/components/link-list/_link-list.scss
+++ b/packages/styles/scss/components/link-list/_link-list.scss
@@ -74,6 +74,9 @@
               padding: $carbon--spacing-05 0;
               justify-content: space-between;
             }
+            svg {
+              margin-left: $carbon--spacing-07;
+            }
           }
         }
 
